# jobweaver-rs

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_UPGRADE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DASHBOARD_RECOMMENDATIONS.md  DATABASE_SCHEMA_COMPLETE.sql  Dockerfile  EXPORTER_SQL_TEMPLATE.txt  IMPLEMENTATION_GUIDE.md  MISSING_ATTRIBUTES_ANALYSIS.md  README.Docker.md  README.md  build_docker.sh  docker-compose.yml  export.sh  push_docker_hub.sh  run.sh  run_docker.sh
docs/: PERFORMANCE.md  SQLITE_SCHEMA.md  WEB_SERVER.md
src/: lib.rs  main.rs
src/application/services/: complexity_calculator.rs  dependency_analyzer.rs  mod.rs
src/application/use_cases/: analyze_jobs.rs  build_dependency_graph.rs  calculate_complexity.rs  determine_migration_waves.rs  mod.rs
src/domain/entities/: condition.rs  dependency.rs  folder.rs  job.rs  mod.rs  resource.rs  scheduling.rs
src/domain/repositories/: job_repository.rs  mod.rs
src/domain/value_objects/: complexity_score.rs  migration_difficulty.rs  migration_priority.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/output/: csv_generator.rs  html_generator.rs  json_generator.rs  markdown_generator.rs  mod.rs  sqlite_exporter.rs
src/infrastructure/parsers/: control_m_models.rs  mod.rs  xml_parser.rs
src/infrastructure/repositories/: in_memory_job_repository.rs  mod.rs
src/presentation/: mod.rs
src/presentation/cli/: commands.rs  mod.rs
src/presentation/dto/: analysis_output.rs  mod.rs
src/web/: auth.rs  config.rs  handlers.rs  mod.rs  models.rs  repository.rs  server.rs
static/: index.html
static/css/: loading.css  modal-tabs.css  root-jobs.css  styles.css
static/js/: app.js  chart-detail.js  dependency-graph.js  loading.js  modal-enhanced.js  root-jobs.js  wave-migration.js
