[package]
name = "jobweaver-rs"
version = "0.1.0"
edition = "2021"
authors = ["JobWeaver Team"]
description = "Control-M XML analyzer for Airflow migration planning"

[dependencies]
# XML parsing
roxmltree = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV generation
csv = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Graph analysis for dependencies
petgraph = "0.6"

# HTML templating
tera = "1.19"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
mockall = "0.12"
proptest = "1.4"

[lib]
name = "jobweaver"
path = "src/lib.rs"

[[bin]]
name = "jobweaver"
path = "src/main.rs"
