[package]
name = "jobweaver-rs"
version = "0.1.0"
edition = "2021"
authors = ["JobWeaver Team"]
description = "Control-M XML analyzer for Airflow migration planning"

[dependencies]
# XML parsing
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV generation
csv = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Graph analysis for dependencies
petgraph = "0.8"

# HTML templating
tera = "1.19"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Progress indicators
indicatif = "0.17"

# Web server
actix-web = "4.9"
actix-files = "0.6"
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web-httpauth = "0.8"
tokio = { version = "1.42", features = ["full"] }

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.16"
oauth2 = "4.4"

# Serialization for web
serde_urlencoded = "0.7"

[dev-dependencies]
# Testing
mockall = "0.14"
proptest = "1.9"

[lib]
name = "jobweaver"
path = "src/lib.rs"

[[bin]]
name = "jobweaver"
path = "src/main.rs"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
